fixed some issue in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,6 @@
 @import "tailwindcss";
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
-@theme {
-  --color-gray-50: oklch(0.985 0 0);
-  --color-gray-100: oklch(0.97 0 0);
-  --color-gray-200: oklch(0.922 0 0);
-  --color-gray-300: oklch(0.87 0 0);
-  --color-gray-400: oklch(0.708 0 0);
-  --color-gray-500: oklch(0.556 0 0);
-  --color-gray-600: oklch(0.439 0 0);
-  --color-gray-700: oklch(0.371 0 0);
-  --color-gray-800: oklch(0.269 0 0);
-  --color-gray-900: oklch(0.205 0 0);
-  --color-gray-950: oklch(0.145 0 0);
-}
-
 @font-face {
   font-family: "IRANYekanX";
   src: url("assets/fonts/woff2/IRANYekanXFaNum-Regular.woff2") format("woff2"),
@@ -47,8 +33,6 @@ body {
   box-sizing: border-box;
   margin: 0;
 }
-
-
 
 @utility menu-item {
   @apply relative flex items-center w-full gap-3 px-3 py-2 font-medium rounded-lg text-sm;
@@ -114,8 +98,6 @@ body {
 @utility menu-dropdown-badge-inactive {
   @apply bg-green-50 group-hover:bg-green-100 dark:bg-green-500/15 dark:group-hover:bg-green-500/20;
 }
-
-
 
 @utility no-scrollbar {
   /* Chrome, Safari and Opera */
